--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-Site do Arthur
+Site do ADM Arthur
 Arthur Oliveira Francisquini
 Colégio Estadual Professor Newton Guimarães
+<!DOCTYPE html>
+<html lang="pt-br">
+ <head>
+  <title> Site do ADM Arthur </title>
+ </head>
+
+ <body>
+  <h1> título do texto </h1>
+  <br> 
+  <h2> subtítulo </h2>
+  <h3> subtítulo 2 </h3>
+  <br>
+  <p> parágrafo </p>
+  <br>
+  <p> parágrafo 2 </p>
+ <body>
+</html>
