--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ Colégio Estadual Professor Newton Guimarães
 <!DOCTYPE html>
 <html lang="pt-br">
  <head>
+ <link rel="stylesheet" href="style.css">
   <title> Site do ADM Arthur </title>
  </head>
 
  <body>
-  <h1> título do texto </h1>
+  <h1> <mark> título do texto </mark> </h1>
   <br> 
   <h2> subtítulo </h2>
   <h3> subtítulo 2 </h3>
